# SpecDrivenDevelopment

Elevance/: .gitignore  Sample Usecase.docx  deep-research-report.md  docker-compose.yml  speckit-prompts-prior-auth-assistant.md
Elevance/.specify/: feature.json
Elevance/backend/: alembic.ini  pyproject.toml
Elevance/backend/alembic/: env.py
Elevance/backend/alembic/versions/: 1a2b3c4d5e6f_initial_migration.py
Elevance/backend/services/agent_intake/: classifier.py  main.py  ocr_mock.py
Elevance/backend/services/agent_rag/: chunking.py  citation.py  embeddings.py  main.py  search.py
Elevance/backend/services/agent_reasoning/: conflict_detector.py  gap_analyzer.py  main.py
Elevance/backend/services/orchestration_api/: dependencies.py  main.py
Elevance/backend/services/orchestration_api/routers/: cases.py  completeness.py  evidence.py  gap.py
Elevance/backend/shared/: auth.py  config.py  db.py  llm_client.py
Elevance/backend/shared/models/: case.py  document.py  evidence.py
Elevance/backend/tests/adversarial/: test_conflict.py  test_low_confidence.py  test_no_evidence.py
Elevance/backend/tests/integration/: test_intake_completeness.py  test_resilience.py
Elevance/backend/tests/unit/: test_reasoning_no_approval.py
Elevance/frontend/: package-lock.json  package.json
ElevancePriorAuthorization/: .gitignore  Elevance_PA_SpecKit_Prompts.md  chat-test.json  docker-compose.yml  embed-test.json  services.txt
ElevancePriorAuthorization/.specify/: feature.json  init-options.json
ElevancePriorAuthorization/backend/: Dockerfile  README.md  alembic.ini  (+3 more)
(+167 files in other folders)
