[project]
name = "elevance-prior-auth-backend"
version = "0.1.0"
description = "Backend for Prior Authorization Evidence Assistant"
authors = [
    { name = "Development Team", email = "dev@example.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1"
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
